install library phaser

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <div class="ion-padding" style="font-size: 120px;">
-   HELL
+  <div class="ion-padding">
+    Hello World
   </div>
 </ion-content>
