making game page great again

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -30,6 +30,8 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+
+  <ion-button [routerLink]="['/game']"> GO TO GAME</ion-button>
 </ion-content>
 
 <ion-footer>
