--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -2,7 +2,7 @@
   <!-- <ion-button class="menu-button" routerLink="/" color="danger">
     Close
   </ion-button> -->
-  <div id="space-invaders"></div>
+  <div id="game"></div>
   <!-- <div class="buttons phone-only">
     <ion-button
       color="danger"
