--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -1,20 +1,12 @@
 <ion-content>
-  <!-- <ion-button class="menu-button" routerLink="/" color="danger">
-    Close
-  </ion-button> -->
   <div id="game"></div>
-  <!-- <div class="buttons phone-only">
-    <ion-button
-      color="danger"
-      (touchstart)="fireStart($event)"
-      (touchend)="fireEnd($event)"
-      >Repair</ion-button
-    >
-    <ion-button (touchstart)="leftStart($event)" (touchend)="leftEnd($event)"
+  <div class="buttons phone-only">
+    <!-- <ion-button (touchstart)="leftStart($event)" (touchend)="leftEnd($event)"
       >Left</ion-button
     >
     <ion-button (touchstart)="rightStart($event)" (touchend)="rightEnd($event)"
       >Right</ion-button
     >
-  </div> -->
+    <ion-button color="danger">Jump</ion-button> -->
+  </div>
 </ion-content>
