--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,62 +1,27 @@
 <ion-content>
-  <ion-grid>
-    <ion-text color="medium" text-center>
-      <p>You joined the chat as {{ currentUser }}</p>
-    </ion-text>
-    <ion-row *ngFor="let message of messages">
-      <ion-col
-        size="9"
-        *ngIf="message.user !== currentUser"
-        class="message other-message"
-      >
-        <b>{{ message.user }}</b><br />
-        <span>{{ message.msg }}</span>
-        <div class="time" text-right>
-          <br />{{ message.createdAt | date:'short' }}
-        </div>
-      </ion-col>
+  <div class="login" [hidden]="isStarted">
+    <div class="login not-connected" [hidden]="isConnected">
+      <input [(ngModel)]="userName" placeholder="Votre pseudo" />
+      <input [(ngModel)]="roomName" placeholder="Votre code" />
+      <button (click)="connect()">
+        CONNECT
+      </button>
+    </div>
 
-      <ion-col
-        offset="3"
-        size="9"
-        *ngIf="message.user === currentUser"
-        class="message my-message"
-      >
-        <b>{{ message.user }}</b><br />
-        <span>{{ message.msg }}</span>
-        <div class="time" text-right>
-          <br />{{ message.createdAt | date:'short' }}
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <div class="login connected" [hidden]="!isConnected">
+      <p>You joined the chat as {{ userName }}</p>
 
-  <ion-button [routerLink]="['/game']"> GO TO GAME</ion-button>
+      <label [hidden]="players != 2"
+        >Vous n'êtes pas assez nombreux pour lancer une partie. <br />En attente
+        d'autres joueurs...</label
+      >
+      <button [hidden]="players == 2" (click)="startGame()">
+        GO TO GAME !
+      </button>
+    </div>
+  </div>
+
+  <div class="game" [hidden]="!isStarted">
+    <div id="game"></div>
+  </div>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar color="light">
-    <ion-row align-items-center>
-      <ion-col size="10">
-        <ion-textarea
-          auto-grow
-          class="message-input"
-          rows="1"
-          [(ngModel)]="message"
-        ></ion-textarea>
-      </ion-col>
-      <ion-col size="2">
-        <ion-button
-          expand="block"
-          fill="clear"
-          color="primary"
-          [disabled]="message === ''"
-          class="msg-btn"
-          (click)="sendMessage()"
-        >
-          <ion-icon name="ios-send" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-toolbar>
-</ion-footer>
