game is in home now

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,5 +23,14 @@
 
   <div class="game" [hidden]="!isStarted">
     <div id="game"></div>
+    <div class="buttons phone-only">
+      <!-- <ion-button (touchstart)="leftStart($event)" (touchend)="leftEnd($event)"
+        >Left</ion-button
+      >
+      <ion-button (touchstart)="rightStart($event)" (touchend)="rightEnd($event)"
+        >Right</ion-button
+      >
+      <ion-button color="danger">Jump</ion-button> -->
+    </div>
   </div>
 </ion-content>
