--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,9 +25,7 @@
   <div class="game" [hidden]="!isStarted"> -->
   <div id="game"></div>
   <div class="buttons phone-only">
-    <ion-button (touchstart)="upStart($event)" (touchend)="upEnd($event)"
-      >up</ion-button
-    >
+    <ion-button (touchstart)="upStart($event)">up</ion-button>
     <!-- <ion-button
         (touchstart)="rightStart($event)"
         (touchend)="rightEnd($event)"
