--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,8 +29,8 @@
     (touchend)="fireShoot($event)"
   ></div>
   <div class="buttons phone-only">
-    <ion-button (touchstart)="upStart($event)" (touchend)="upEnd($event)"
-      >up</ion-button
+    <!-- <ion-button (touchstart)="upStart($event)" (touchend)="upEnd($event)"
+      >up</ion-button -->
     >
     <!-- <ion-button
         (touchstart)="rightStart($event)"
