--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,15 +28,6 @@
     (touchstart)="fireAim($event)"
     (touchend)="fireShoot($event)"
   ></div>
-  <div class="buttons phone-only">
-    <!-- <ion-button (touchstart)="upStart($event)" (touchend)="upEnd($event)"
-      >up</ion-button -->
-    <!-- <ion-button
-        (touchstart)="rightStart($event)"
-        (touchend)="rightEnd($event)"
-        >Right</ion-button
-      >
-      <ion-button color="danger">Jump</ion-button> -->
-  </div>
+  <div class="buttons phone-only"></div>
   <!-- </div> -->
 </ion-content>
