canon is here and rotation too

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,7 +25,8 @@
   <div class="game" [hidden]="!isStarted"> -->
   <div
     id="game"
-    (touchstart)="fireAim($event)"
+    (touchstart)="fireStart($event)"
+    (touchmove)="fireAim($event)"
     (touchend)="fireShoot($event)"
   ></div>
   <div class="buttons phone-only"></div>
